--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
+body{
+  background-color: rgb(248, 248, 248);
+}
 .app-wrapper {
   margin: 0 auto;
   display: grid;
   width: 1200px;
   grid-template-areas: "h h" "n c";
-  grid-gap: 10px;
+  gap: 20px;
   grid-template-rows: 80px 1fr;
   grid-template-columns: 2fr 10fr;
  
@@ -12,4 +15,7 @@
 
 .app-wrapper-content {
   grid-area: c;
+  background-color: white;
+  border-radius: 10px;
+  padding-left: 30px;
 }
