--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,6 +1,7 @@
 .header {
     grid-area: h;
     background-color: cornflowerblue;
+    border-radius: 0 0 5px 5px;
 }
 .header__logo{
     width: 64px;
