--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ body{
   background-color: rgb(248, 248, 248);
 }
 .app-wrapper {
-  margin: 0 auto;
+  margin: 10px auto;
   display: grid;
   width: 1200px;
   grid-template-areas: "h h" "n c";
