--- a/src/components/NavBar/Navbar.module.css
+++ b/src/components/NavBar/Navbar.module.css
@@ -1,15 +1,25 @@
 .nav {
     grid-area: n;
     background-color: dimgray;
-    padding: 20px;
+   padding-top: 20px;
     border-radius:5px;
+    height:500px
+}
+.item{
+    margin-top: 20px;
+    padding: 10px 20px;
+}
+.item:first-child{
+    margin: 0;
 }
 
 .item a {
     color: white;
     text-decoration: none;
     font-size: 20px;
+    margin-top: 20px;
 }
+
 
 .item a.activeLink {
     color: gold;
