--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -5,8 +5,17 @@ button{
     font-size: 16px;
     border-radius: 20px;
     margin-right: 15px;
+    margin-bottom: 15px;
+    margin-top: 15px;
 }
 button:hover{
     background-color: black;
     color: white;
+}
+textarea{
+    width: 240px;
+}
+
+.title{
+    margin-bottom: 20px;
 }
