--- a/src/components/NavBar/Navbar.module.css
+++ b/src/components/NavBar/Navbar.module.css
@@ -1,15 +1,15 @@
 .nav {
     grid-area: n;
     background-color: dimgray;
-   padding-top: 20px;
-    border-radius:5px;
-    height:500px
+    padding-top: 30px;
+    padding-left: 30px;
+    border-radius: 5px;
+    height: 500px;
 }
-.item{
+.item {
     margin-top: 20px;
-    padding: 10px 20px;
 }
-.item:first-child{
+.item:first-child {
     margin: 0;
 }
 
@@ -19,7 +19,6 @@
     font-size: 20px;
     margin-top: 20px;
 }
-
 
 .item a.activeLink {
     color: gold;
